--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,28 @@
 * style.css
 * by David Mendez
 */
+
+#slide1 {
+	background-image:url('../slider/austintexas-768.jpg');	
+    width: 100%;
+    height: 160%;
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+#slide2 {
+	background-image:url('../slider/slide2-768.jpg');	
+    width: 100%;
+    height: 160%;
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
 #about{
 	margin-top: 50px;
 }
@@ -42,3 +64,79 @@ footer{
 	list-style: none;
 	padding: 0;
 }
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+	#slide1 {
+		background-image:url('../slider/austintexas-2000x1334.jpg');	
+	    width: 100%;
+	    height: 160%;
+	    background-position: center;
+	    -webkit-background-size: cover;
+	    -moz-background-size: cover;
+	    background-size: cover;
+	    -o-background-size: cover;
+	}
+	#slide2 {
+		background-image:url('../slider/slide2-1200.jpg');	
+	    width: 100%;
+	    height: 160%;
+	    background-position: center;
+	    -webkit-background-size: cover;
+	    -moz-background-size: cover;
+	    background-size: cover;
+	    -o-background-size: cover;
+	}
+
+}
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+	#slide1 {
+		background-image:url('../slider/austintexas-1000x663.jpg');	
+	    width: 100%;
+	    height: 160%;
+	    background-position: center;
+	    -webkit-background-size: cover;
+	    -moz-background-size: cover;
+	    background-size: cover;
+	    -o-background-size: cover;
+	}
+	#slide2 {
+		background-image:url('../slider/slide2-992.jpg');	
+	    width: 100%;
+	    height: 160%;
+	    background-position: center;
+	    -webkit-background-size: cover;
+	    -moz-background-size: cover;
+	    background-size: cover;
+	    -o-background-size: cover;
+	}
+
+
+}
+/* Small devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+	#slide1 {
+		background-image:url('../slider/austintexas-768.jpg');	
+	    width: 100%;
+	    height: 160%;
+	    background-position: center;
+	    -webkit-background-size: cover;
+	    -moz-background-size: cover;
+	    background-size: cover;
+	    -o-background-size: cover;
+	}
+	#slide2 {
+		background-image:url('../slider/slide2-768.jpg');	
+	    width: 100%;
+	    height: 160%;
+	    background-position: center;
+	    -webkit-background-size: cover;
+	    -moz-background-size: cover;
+	    background-size: cover;
+	    -o-background-size: cover;
+	}
+
+
+}
+
+
